fix(docs): tabHeader overlapping on search results popover

--- a/docs/src/components/Container/Container.css
+++ b/docs/src/components/Container/Container.css
@@ -1,5 +1,5 @@
 .TabHeader {
-    z-index: 1000;
+    z-index: 450;
     top: 0;
   }
 
